# Motion-Graph

./: CMakeLists.txt  README.md
bvhs/: walk_fast_stright (copy).bvh
dependencies/imgui/: CMakeLists.txt
dependencies/stb/: CMakeLists.txt
src/: bvh_motion.cpp  bvh_motion.h  joint.cpp  joint.h  main.cpp  motion_graph.cpp  motion_graph.h  parse_bvh.cpp  parse_bvh.h
