#cmake_minimum_required(VERSION 3.0.0)

# CMake file for compiling the imgui library
#project(stb)

# Add THIS Directory in the top level CMakeLists.txt file using
#    add_subdirectory(/home/jorge/code-new/imgui-demo/external/imgui/)

# Add the library that is built on this subdirectory.
#add_library(stb 
#    stb_image.h)

# target_include_directories(${PROJECT_NAME}.out PRIVATE Adder)
#target_include_directories(stb PRIVATE /dependencies/stb)
